css/style.css
@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);

body {
  color: rgb(33,33,33);
  font-family: "Lato", sans-serif;
  font-weight: 400;
}

img {
  margin: 0;
}

h1 {
  font-size: 32px;
  font-weight: 300;
  line-height: 40px;
  margin: 0;
}

h2 {
  font-size: 20px;
  font-weight: 700;
  line-height: 28px;
  margin: 0 0 10px;
}

p {
  margin-top: 0;
}

core-animated-pages {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

core-animated-pages > * {
  background-color: white;
  padding: 16px;
  overflow-y: auto;
  user-select: text;
  -moz-user-select: text;
  -webkit-user-select: text;
  -ms-user-select: text;
}

body /deep/ core-scaffold core,
core-scaffold {
  background-color: rgb(239,68,56) !important;
}

body /deep/ core-toolbar,
core-toolbar {
  background-color: rgb(239,68,56) !important;
  color: #fff !important;
}

nav {
  height: 100%;
}

core-menu {
  color: #01579b;
  height: 92%;
  margin:  0;
  overflow-y: auto;
}

core-menu > chartbook-item {
  transition: all 300ms ease-in-out;
}

core-menu > chartbook-item.intro-item {
  background-color: #00a0b0;
  color: #fff;
  font-weight: 700;
  letter-spacing: 3px;
  padding: 20px 12px;
  text-transform: uppercase;
}

core-menu > chartbook-item.chapter-item {
  background-color: #366899;
  color: #fff;
  font-weight: 700;
  letter-spacing: 3px;
  padding: 20px 12px;
  text-transform: uppercase;
}

core-menu > chartbook-item.core-selected {
  background: #e1f5fe;
}

core-menu > chartbook-item.core-selected.intro-item {
  background-color: #35a7b2;
  color: #fff;
}

core-menu > chartbook-item.core-selected.chapter-item {
  background-color: #5e96cd;
  color: #fff;
}

.page-container {
  margin: 0 auto;
  width: 70%;
}

.wide {
  width: 100%;
}

.square {
  float: left;
  width: 60%;
  margin: 0 10px 0;
}

.callout {
  color: #085197;
  font-size: 15px;
  font-weight: 700;
}

.cover {
  background-image: url(../images/cover-bg.jpg);
  background-position: center;
  background-size: cover;
  color: #fff;
  padding: 0;
}

.cover .page-container {
  background-color:rgba(239,68,56,0.9);
  margin:auto 0;
  max-height: 50%;
  padding: 30px 15%;
  text-align:center;
}

.chapter {
  background-position: center;
  background-size: cover;
  color: #fff;
}

.chapter > .page-container {
  max-width: 600px;
  margin: 0 auto;
  padding-top: 30px;
}

.chapter h1 {
  font-size: 20px;
  font-weight: 700;
  letter-spacing: 5px;
  line-height: 28px;
  text-transform: uppercase;
}

.chapter h2 {
  font-size: 32px;
  font-weight: 300;
  line-height: 48px;
  margin: 0 0 20px;
  text-transform: uppercase;
}

.chapter-body {
  line-height: 1.5;
  max-width: 480px;
  margin: 0 auto;
}

@media all and (max-width: 600px) {
  h1 {
    font-size: 24px;
    line-height: 28px;
  }

  h2 {
    font-size: 18px;
    line-height: 26px;
  }

  core-animated-pages {
    width: 100%;
    height: 100%;
  }

  .page-container {
    margin: 0;
    width: 100%;
  }

}

.source {
  color: rgb(117,117,117);
}

.share-buttons {
  margin: rem-calc(0 0 20);
}

a.social-link {
  display:inline;
  background-color: #fff;
  color: #ccc;
  text-decoration:none;
  padding:6px 12px;
  margin: 0 .5rem 0 0;
  -webkit-transition: background 0.1s linear;
  -moz-transition: background 0.1s linear;
  -ms-transition: background 0.1s linear;
  -o-transition: background 0.1s linear;
  transition: background 0.1s linear;
}

a.social-link-no-bg {
  display:inline;
  color: #fff;
  text-decoration:none;
  padding:6px 12px;
  margin: 16px 8px 0 0;
  -webkit-transition: background 0.1s linear;
  -moz-transition: background 0.1s linear;
  -ms-transition: background 0.1s linear;
  -o-transition: background 0.1s linear;
  transition: background 0.1s linear;
}

a:hover.facebook {
  background-color:#4a66b7;
  color: #fff;
}

a:hover.twitter {
  background-color:#00acee;
  color: #fff;
}

a:hover.linkedin {
  background-color:#1b86bc;
  color: #fff;
}

a:hover.gplus {
  background-color:#dd4b38;
  color: #fff;
}

a:hover.email {
  background-color:#ff9600;
  color: #fff;
}

@media all and (max-width: 1000px) {
  .square {
    float: none;
    width: 100%;
  }

  .chapter-body {
    column-count: 1;
    -moz-column-count: 1;
    -webkit-column-count: 1;
  }

  .cover img {
    margin: 200px 0 0;
  }

  .hide-on-small {
    display: none;
  }
}

